drive: Add WithBaseSyncPrimitives to the blocking runner's traits

BUG=767472

Change-Id: I719ac8f220c55209ae504981aa94873eafdd96ec
Reviewed-on: https://chromium-review.googlesource.com/677997
Reviewed-by: Kazuhiro Inaba <kinaba@chromium.org>
Commit-Queue: Ryo Hashimoto <hashimoto@chromium.org>
Cr-Commit-Position: refs/heads/master@{#503673}
Former-commit-id: 008fb813c3afc34d217dbb46aa1dc0ed491f59c3